css/prsm.css
/* ... */
#popup-label {
	text-align: center;
	position: absolute;
	top: 60px;
	left: 50%;
	transform: translate(-50%, -50%);
	font-size: 20px;
	overflow: hidden;
	outline: none;
	color: black;
	min-width: 160px;
	min-height: 50px;
	max-height: 60px;
}
#popup-operation {
	position: absolute;
	top: 3px;
	left: 5px;
	font-size: 16px;
	font-weight: bold;
	padding: 3px;
}

#popup-saveButton {
	position: absolute;
	bottom: 7px;
	right: 7px;
	font-size: 12px;
	background-color: black;
	color: white;
	border-radius: 20%;
	padding: 3px;
}
#popup-saveButton:hover {
	text-decoration: none;
	cursor: pointer;
	background-color: gray;
}
#popup-cancelButton {
	color: black;
	position: absolute;
	top: 0px;
	right: 5px;
	font-size: 20px;
}
#popup-cancelButton:hover {
	color: gray;
	text-decoration: none;
	cursor: pointer;
}
#popup table {
	width: 160px;
	table-layout: fixed;
	font-size: 14px;
	position: absolute;
	top: 90px;
}
#popup table td {
	width: 33%;
}
.input-color-container {
	position: relative;
	overflow: hidden;
	width: 30px;
	height: 30px;
	border: solid 2px #ddd;
	border-radius: 30px;
}

.input-color {
	position: absolute;
	right: -8px;
	top: -8px;
	width: 56px;
	height: 56px;
	border: none;
}
/* ----- Top Navigation Bar ---------------------------------------------------------- */

nav {
	display: flex;
	background-color: var(--header-color);
	flex-direction: row;
	justify-content: flex-start;
	height: 70px;
	padding: 10px 0 0 20px;
}
.strapline {
	font-size: 20px;
	margin: 3px 0 0 10px;
	color: white;
}
#version {
	font-size: xx-small;
	color: lightgray;
	margin-left: 10px;
}
.maptitle {
	font-size: 20px;
	margin: 5px 0 0 10px;
	color: #ffc107;
	text-align: left;
}
.unsetmaptitle {
	color: lightgrey;
}
.button-wrapper {
	margin: auto 50px auto auto;
}
.buttons {
	flex-grow: 3;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}
nav button {
	border: 1px solid var(--header-color);
	border-radius: 4px;
	color: white;
	font-size: 24px;
	background-color: var(--header-color);
	margin: auto 5px;
	outline: none;
}
nav button .small-button {
	font-size: 16px;
}

nav button:hover {
	border: 1px solid black;
}

nav button:active {
	color: var(--header-hover-color);
	border: 1px solid black;
}
nav button .pressed {
	color: var(--header-pressed-color);
}
.reveal {
	display: flex !important;
}
.disabled {
	color: var(--header-disabled-color);
}
.disabled:hover,
.disabled:active {
	color: var(--header-disabled-color);
}
.right-border {
	border-right: 1px solid white;
}
.left-border {
	border-left: 1px solid white;
}
.dropdown-wrapper {
	position: relative;
	display: inline-block;
	padding-right: 5px;
	color: white;
}
.dropdown-content {
	display: none;
	position: absolute;
	background-color: var(--header-color);
	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
	z-index: 10;
}
.dropdown-wrapper:hover .dropdown-content {
	display: block;
}
#saveFile {
	margin-right: 0;
	padding-right: 0;
}
.dropdown-content .tooltip button {
	font-size: 14px;
}
.dropdown-content .tooltip .tooltiptext {
	top: 0;
	left: -70px;
}
/* for iPads etc in landscape: nav buttons go under title */

@media screen and (min-width: 481px) and (max-width: 1112px) {
	/* 	html,
	body {
		max-height: 100%;
		overflow-x: hidden;
		max-width: 100%;
	}
	main {
		height: calc(100vh - 140px);
	}
	header {
		height: 100px;
		background-color: red;
	}
	aside {
		top: 110px;
	}
	nav {
		display: grid;
		height: 90px;
		grid-template-columns: 160px 1fr;
	}
	.strapline {
		grid-column: 1;
	}
	.button-wrapper {
		grid-column: 2;
		grid-row: 1;
		width: 100%;
	}
	.buttons {
		justify-content: center;
	}
	nav button {
		margin: auto 5px;
		font-size: 18px;
	} */
	html,
	body {
		height: 100%;
		overflow-x: hidden;
		max-width: 100%;
	}
	main {
		height: calc(100vh - 130px);
	}
	header {
		height: 90px;
	}
	nav {
		display: grid;
		height: 90px;
		grid-template-columns: 1fr;
		padding: 0;
	}
	nav img {
		display: none;
	}
	.strapline {
		grid-column: 1;
		grid-row: 1;
		font-size: 20px;
	}
	.maptitle {
		text-align: center;
		font-size: 16px;
		margin-top: 5px;
	}
	.button-wrapper {
		grid-column: 1;
		grid-row: 2;
		width: 100%;
	}
	.buttons {
		justify-content: center;
	}
	nav button {
		margin: auto 0;
		font-size: 12px;
	}
	input[type='range'] {
		width: 40px;
	}
}
/* for iPads etc in portrait and smart phones: nav buttons go under title and font is smaller */

@media screen and (max-width: 480px) {
	html,
	body {
		height: 100%;
		overflow-x: hidden;
		max-width: 100%;
	}
	main {
		height: calc(100vh - 130px);
	}
	header {
		height: 90px;
	}
	nav {
		display: grid;
		height: 90px;
		grid-template-columns: 1fr;
		padding: 0;
	}
	nav img {
		display: none;
	}
	.strapline {
		grid-column: 1;
		grid-row: 1;
		font-size: 20px;
	}
	.maptitle {
		text-align: center;
		font-size: 16px;
		margin-top: 5px;
	}
	.button-wrapper {
		grid-column: 1;
		grid-row: 2;
		width: 100%;
	}
	.buttons {
		justify-content: center;
	}
	nav button {
		margin: auto 0;
		font-size: 12px;
	}
	input[type='range'] {
		width: 40px;
	}
}
#download {
	width: 0;
	height: 0;
	visibility: hidden;
}
/* Tooltips for nav bar buttons and chat window*/

.tooltip {
	position: relative;
	display: inline-block;
}
/* Tooltip text */

.tooltip .tooltiptext {
	visibility: hidden;
	width: 120px;
	top: 100%;
	left: 50%;
	margin-left: -60px;
	/* Use half of the width (120/2 = 60), to center the tooltip */
	background-color: gray;
	color: white;
	text-align: center;
	padding: 5px 0;
	border-radius: 6px;
	font-size: 12px;
	position: absolute;
	z-index: 5;
	opacity: 0;
	transition: opacity 1s;
}
/* Show the tooltip text when you mouse over the tooltip container */

.tooltip:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
}
.tooltip:active .tooltiptext {
	visibility: hidden;
}
/* ... */

